# Gyges

./: .gitignore  Calculations.c  Calculations.cp310-win_amd64.pyd  Calculations.cp38-win_amd64.pyd  Calculations.py  Cargo.toml  FancyBoardPrint.py  Gyges.py  Interface.py  Main.py  Multiprocessor.py  README.md  kernels.cu  kernels.ptx  requirements.txt  test.txt
.devcontainer/: devcontainer.json
Gyges_Package/: setup.py
Gyges_Package/Gyges/: Board.py  Evaluator.py  FancyPrint.py  Main.py  __init__.py
Gyges_Package/Gyges.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
gyges/: Cargo.toml  README.md
gyges/benches/: bench_main.rs  board_benches.rs  movegen_benches.rs
gyges/src/: consts.rs  lib.rs
gyges/src/board/: bitboard.rs  board.rs  mod.rs
gyges/src/core/: bit_twiddles.rs  masks.rs  mod.rs  piece.rs  player.rs  sq.rs
gyges/src/moves/: gen_reach_consts.rs  mod.rs  move_gen.rs  move_list.rs  movegen.rs  movegen_consts.rs  moves.rs  new_movegen.rs  new_movegen_consts.rs  one_dir_tables.rs  two_dir_tables.rs
gyges/src/tools/: mod.rs  tt.rs  zobrist.rs
gyges_engine/: Cargo.toml  README.md  UGI-Protocol-Specification.md  UGI-Protocol-Specification.txt
gyges_engine/src/: consts.rs  generate_one_tables.rs  generate_three_tables.rs  generate_two_tables.rs  gpu_reach_consts.rs  lib.rs  main.rs  matrix.rs  merged_reach_consts.rs  mgc_gen.rs  path_data_gen.rs  root_movelist.rs  ugi.rs
gyges_engine/src/board/: bitboard.rs  board.rs
gyges_engine/src/moves/: move_gen.rs  move_list.rs  moves.rs
gyges_engine/src/new_movegen/: bitstate.rs  cuda_helpers.rs  mod.rs
gyges_engine/src/search/: eval_display.rs  evaluation.rs  mod.rs  network.rs  policy_data.rs  searcher.rs
gyges_engine/src/tools/: tt.rs  zobrist.rs
lib/: Calculations.py  CythonSetup.py  Multiprocessor.py
mgc/: Cargo.toml
src/: Bench.txt  bit_twiddles.rs  bitboard.rs  bitmove.rs  board.rs  consts.rs  engine.rs  evaluation.rs  hints.txt  macros.rs  main.rs  mgc_gen.rs  move_gen.rs  move_generation.rs  move_list.rs  moves.rs  tests.rs  transposition_table.rs  transposition_tables.rs  tree_depth_1.txt  tt.rs  ugi.rs  zobrist.rs
src/Engine Code/: engine.rs  macros.rs
src/Old code/: backtracker.rs
src/Other/: bitboard_gens.rs  parrallel_search_tests.rs
src/Other/nn/: move_count_dataset.csv  nn.rs
src/board/: bitboard.rs  board.rs  mod.rs
src/helper/: bit_twiddles.rs  mod.rs  tree_storage.rs
src/move gen tests/: bitboard.rs  board.rs  main.rs  move_gen.rs
src/moves/: mod.rs  move_gen.rs  move_list.rs  moves.rs
src/search/: evaluation.rs  mod.rs  searcher.rs
src/tools/: mod.rs  tt.rs  zobrist.rs
