[workspace]
members = ["gyges", "gyges_engine"]
resolver = "2"

[profile.dev]
opt-level = 3
debug = true
split-debuginfo = '...'
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 4
rpath = false

[profile.release]
opt-level = 3
lto = true
panic = "abort"
