[workspace]
members = ["gyges", "gyges_engine"]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
panic = "unwind"
codegen-units = 1
debug = false

[profile.dev]
opt-level = 3
debug = true
split-debuginfo = '...'
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 4
rpath = false
