[package]
name = "gyges"
version = "1.0.2"
edition = "2021"
description = "A library for the board game Gygès."
license = "GPL-3.0-or-later"
documentation = "https://docs.rs/gyges"
repository = "https://github.com/Beck-Bjella/Gyges"
readme = "README.md"
keywords = ["boardgame", "gyges", "ai", "library", "games"]
categories = ["games", "game-engines"]

[lib]
name = "gyges"
path = "src/lib.rs"

[dependencies]
rand = "0.8.5"

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}

[[bench]]
name = "bench_main"
harness = false
